# tsftgan

./: LICENSE  README.md  pyproject.toml
src/tstgan/: __main__.py
src/tstgan/common/: cfg.py  utils.py
src/tstgan/data/: unimib.py
src/tstgan/nn/: fid_score.py  model.py
src/tstgan/orchestration/: functions.py  runner.py
